objects/ssot__CommodityUsage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommodityUsage_AssetId_map_Asset_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommodityUsage_AssetId_map_Asset_Id_N_1</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>CommodityUsage_AssetId_map_Asset_Id_N_1</relationshipLabel>
        <relationshipName>CommodityUsage_AssetId_map_Asset_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ConsumptionQuantityUOMId__c</fullName>
        <label>Consumption Quantity Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsumptionQuantity__c</fullName>
        <label>Consumption Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Commodity Usage Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MeterExternalId__c</fullName>
        <label>Meter External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegisterExternalId__c</fullName>
        <label>Register External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicePointExternalId__c</fullName>
        <label>Service Point External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TimeOfUse__c</fullName>
        <label>Time Of Use</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1734838429107_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommodityUsage_ConsumptionQuantityUO_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>CommodityUsage_ConsumptionQuantityUO_rel</relationshipLabel>
        <relationshipName>rel_1734838429107_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>